src-ken&y/objects/Component__c.object
<CustomObject>
    <customHelpPage>HelpItemSpecifications</customHelpPage>
    <description>Product structure details</description>
    <fields>
        <fullName>Allocate_on_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked: While creating planned PO from MRP records, the planned PO will be tagged with Material Tracking</description>
        <label>Allocate on Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assembly_Item_Spec_Name__c</fullName>
        <description>The name of the Item Specification that our component should be a part of, used when upserting components so that they can find the proper Assembly_Item_Specification__c</description>
        <label>Assembly Item Spec Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assembly_Item_Specification__c</fullName>
        <description>Assembly Item Specification</description>
        <label>Assembly Item Specification</label>
        <referenceTo>Item_Specification__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Assembly_Revision__c</fullName>
        <description>Assembly Item Specification&apos;s Revision</description>
        <formula>Assembly_Item_Specification__r.Revision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assembly Revision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company this Component belongs to</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Component Item</description>
        <label>Component Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2)</booleanFilter>
            <errorMessage>Component Item Company does not match Component Company.</errorMessage>
            <filterItems>
                <field>Item__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Item__c.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Components (Component Item)</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component_Sequence__c</fullName>
        <description>Optional Sorting Sequence</description>
        <inlineHelpText>Optional Sorting Sequence</inlineHelpText>
        <label>Component Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Component_Stocking_UOM__c</fullName>
        <formula>Component_Item__r.Stocking_UOM__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Stocking UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Type__c</fullName>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to upsert components without creating duplicates</description>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Quantity_per_Assembly__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Quantity of this component at this line number on the Bill of Materials</description>
        <inlineHelpText>Quantity of this component used in the BOM. To account for a by-product component being used in this assembly,  specify the Quantity Per Assembly as a positive amount.</inlineHelpText>
        <label>Quantity per Assembly</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Component Reference Information</description>
        <label>Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Operation_Sequence__c</fullName>
        <formula>Routing__r.Operation_Sequence__c</formula>
        <label>Routing Operation Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing_Sequence__c</fullName>
        <formula>Routing__r.Resource_Sequence__c</formula>
        <label>Routing Resource Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Routing</description>
        <inlineHelpText>Lookup to Routing</inlineHelpText>
        <label>Routing</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Routing Assembly must match Component Assembly</errorMessage>
            <filterItems>
                <field>Routing__c.Assembly_Item_Specification__c</field>
                <operation>equals</operation>
                <valueField>$Source.Assembly_Item_Specification__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Routing__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Specifies whether the component is to be kitted, backflushed, or is a by-product of previously manufactured finished goods. To account for a by-product component being used in this assembly,  specify the Quantity Per Assembly as a negative amount.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kit</fullName>
                </value>
                <value>
                    <fullName>Backflush</fullName>
                </value>
                <value>
                    <fullName>By-product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yield__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Yield precentage applied to component on this bill.  Enter as percentage (default is 100, meaning 100% yield).</description>
        <inlineHelpText>Yield that applies to this component on this BOM. The default is 100% - you do not need to enter the % symbol.</inlineHelpText>
        <label>Yield</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Component</label>
    <nameField>
        <label>Component</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Company_must_match</fullName>
        <active>true</active>
        <description>Company must natch header&apos;s company</description>
        <errorConditionFormula>Assembly_Item_Specification__r.Company__c !=  Company__c</errorConditionFormula>
        <errorMessage>Component Company must match Item Specification Company.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Component_Sequence_cannot_be_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>Component_Sequence__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Component_Sequence__c</errorDisplayField>
        <errorMessage>Component Sequence cannot be Negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Component_Sequence_should_be_blank</fullName>
        <active>true</active>
        <description>Component sequence should be blank if Component Type selected is By Product.</description>
        <errorConditionFormula>ISPICKVAL(Type__c,&apos;By-product&apos;)   &amp;&amp;  ! ISBLANK(Component_Sequence__c)</errorConditionFormula>
        <errorDisplayField>Component_Sequence__c</errorDisplayField>
        <errorMessage>Component sequence should be blank if Component Type selected is By Product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Component_cannot_equal_assembly</fullName>
        <active>true</active>
        <description>The component item and assembly item cannot be the same</description>
        <errorConditionFormula>Assembly_Item_Specification__r.Item__c  =  Component_Item__c</errorConditionFormula>
        <errorDisplayField>Component_Item__c</errorDisplayField>
        <errorMessage>The component item and assembly item cannot be the same</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_value_check</fullName>
        <active>true</active>
        <description>Check if the quantity per assembly is valid</description>
        <errorConditionFormula>NOT(Quantity_per_Assembly__c &gt;0)</errorConditionFormula>
        <errorDisplayField>Quantity_per_Assembly__c</errorDisplayField>
        <errorMessage>Quantity per assembly should greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Yield_Value_Check</fullName>
        <active>true</active>
        <description>Yield must be greater than 0% and less or equal to 100%</description>
        <errorConditionFormula>OR(Yield__c &lt;=0,Yield__c &gt;1)</errorConditionFormula>
        <errorDisplayField>Yield__c</errorDisplayField>
        <errorMessage>Yield must be greater than 0% and less or equal to 100%</errorMessage>
    </validationRules>
</CustomObject>